@@ -121,6 +121,9 @@
 <!ENTITY setutxent "<ulink url='&unix-f;/setutxent.html'><function>setutxent</function></ulink>">
 <!ENTITY mkstemp "<ulink url='&unix-f;/mkstemp.html'><function>mkstemp</function></ulink>">
 <!ENTITY tempnam "<ulink url='&unix-f;/tempnam.html'><function>tempnam</function></ulink>">
+<!ENTITY fsync "<ulink url='&unix-f;/fsync.html'><function>fsync</function></ulink>">
+<!ENTITY sync "<ulink url='&unix-f;/sync.html'><function>sync</function></ulink>">
+
 
 <!-- header files -->
 <!ENTITY unix-b "&unix-top;/basedefs">
