@@ -42,7 +42,7 @@ getlogin getpwent getpwnam getpwuid getuid dnl
 openlog setlogmask syslog closelog dnl
 getpgid setpgrp getsid setpgid setsid kill dnl
 endutxent getutxent getutxid getutxline pututxline setutxent dnl
-fchmod fchown fstat link stat symlink utime mknod chmod umask)
+fchmod fchown fstat link stat symlink utime mknod chmod umask fsync sync)
 AC_FUNC_CHOWN
 AC_SEARCH_LIBS(erf, m)
 AC_CHECK_FUNCS(erf erfc lgamma fstatvfs statvfs getpriority setpriority)
